# python_practice

./: README.md  exemplo_00.py  pyproject.toml
aula02/: exercicios.py  main.py  pyproject.toml
aula03/: exercicios.py  main.py  pyproject.toml
kpi_calculator/: README.md  kpi.py
