[project]
name = "python-practice"
version = "0.1.0"
description = "\"Exercises in python, including the first challenge\""
authors = [
    {name = "lucasdev",email = "lucassal16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipython (>=9.10.0,<10.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
